2007-01-24  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* src/sapwood-rc-style.c (theme_symbols): Remove unused tokens
	TOKEN_D_POLYGON, TOKEN_D_OVAL, TOKEN_D_STRING, TOKEN_D_CROSS,
	TOKEN_D_RAMP, TOKEN_D_ENTRY
	* src/theme-pixbuf.h: rename unused tokens to TOKEN_UNUSED_*

2007-01-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Pass pixmaps directly instead of reverse engineering them from
	coordinates

	* src/sapwood-pixmap.h (sapwood_pixmap_get_pixmap)
	* src/sapwood-pixmap.c (get_pixmaps, sapwood_pixmap_get_pixmap):
	Export a function for getting pixmap and mask for each square
	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects)
	* src/sapwood-pixmap.h (SapwoodRect)
	* src/sapwood-render.c (theme_pixbuf_render): replace source rectangle
	with pixmap and mask pointers

2007-01-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image,draw_gap_image): remove unused
	allow_setbg parameter
	(draw_shadow,draw_arrow,draw_arrow,draw_arrow,draw_diamond,draw_box,
	draw_flat_box,draw_check,draw_option,draw_tab,draw_extension,draw_focus,
	draw_slider,draw_handle): update callers

2007-01-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image, draw_gap_image): replace
	deprecated gdk_window_get_size() call with gdk_drawable_get_size()

2007-01-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Export only symbols needed for the theme engine ABI

	* src/sapwood-pixmap.h
	* src/sapwood-proto.h
	* src/sapwood-rc-style.h
	* src/sapwood-style.h
	* src/theme-pixbuf.h: Tag internal functions with G_GNUC_INTERNAL to
	avoid symbol leakage.
	* src/Makefile.am: Add check target to verify the ABI.

2007-01-24  Jose Dapena Paz  <jdapena@igalia.com>

	* src/sapwood-server.c (extract_pixmap_single, main,
	get_display_depth): use system default visual depth for all pixmaps.
	This avoids crashing when running maemo desktop in a 24 bits color
	depth X server (bug #856).
